# IP-Address-Locator

./: .gitignore  README.md  app.py  index.html  main.py  pyproject.toml  settings.py
.github/workflows/: snyk-security.yml
css/: style.css
templates/: index.html
