[tool.poetry]
name = "ip-address-locator"
version = "0.1.0"
description = "IP Address Locator! With this tool, you can easily locate any IP address. It's designed to simplify your IP tracking needs."
authors = ["Tariq Jamal A <tariqjamal4267324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pydantic-settings = "^2.4.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
blank_line_after_tag="load,extends,include"
blank_line_before_tag="load,extends,include"
close_void_tags=true
exclude=".venv,venv,env"
format_attribute_template_tags=true
format_css=true
format_js=true
indent_size=4
max_line_length=120